--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,8 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Jobeet! - pracuj!{% endblock %}</title>
         {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+            <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         {% endblock %}
@@ -11,7 +13,7 @@
     </head>
     <body>
         {% block header %}
-            <nav class="navbar navbar-inverse">
+            <nav class="navbar">
                 <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
@@ -21,65 +23,57 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Brand</a>
+                        <a class="navbar-brand" href="{{ path('homepage') }}">Jobeet</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                            <li><a href="#">Link</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <form class="navbar-form navbar-left" action="{{ path('job_search') }}" role="search">
+                        <form action="{{ path('job_search') }}" class="navbar-form" role="search">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Szukaj ofert">
+                                <input type="text" name="query" class="form-control" placeholder="Szukaj ofert">
                             </div>
                             <button type="submit" class="btn btn-default">Szukaj</button>
                         </form>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#">Link</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                </ul>
-                            </li>
-                        </ul>
+                            {% if app.user %}
+                                <li><a href="{{ path('add_job') }}">Dodaj ofertę</a></li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Witaj {{ app.user.username }}<span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        {% if is_granted('ROLE_SUPER_ADMIN') %}
+                                            <li><a href="{{ path('admin') }}">Panel Admina</a></li>
+                                            <li class="divider"></li>
+                                            {% endif %}
+                                        <li><a href="{{ path('fos_user_profile_edit') }}">Mój profil</a></li>
+                                        <li><a href="#">Moje ogłoszenia</a></li>
+                                        <li class="divider"></li>
+                                        <li><a href="{{ path('fos_user_security_logout') }}">Wyloguj</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        {% else %}
+                            <li><a href="{{ path('fos_user_security_login') }}">zaloguj się</a></li>
+                            {% endif %}
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
             </nav>
         {% endblock %}
-        <div class="row">
-            <div class="col-md-3">
+        <div class="wrapper">
+            <div class="col-md-2">
+                <p>Kategoria</p>
                 {% block side %}
                     {{ render(controller('AppBundle:Category:list')) }}
                 {% endblock %}
             </div>
-            <div class="col-md-9">
+            <div class="col-md-10 main">
                 {% block body %}
 
                 {% endblock %}
             </div>
         </div>
         {% block javascripts %}
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
             <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
         {% endblock %}
     </body>
 </html>
