--- a/app/Resources/views/Job/edit.html.twig
+++ b/app/Resources/views/Job/edit.html.twig
@@ -1,7 +1,38 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}AppBundle:Job:edit{% endblock %}
+{% block title %}Edytuj ogłoszenie{% endblock %}
 
 {% block body %}
-<h1>Welcome to the Job:edit page</h1>
+
+    <form method="post" action="{{ path('edit_job', {"id": job.id}) }}" novalidate>
+        <h4>Edytuj ofertę pracy</h4>
+        <div class="form-group">
+            {{ form_start(form) }}
+            {{ form_errors(form) }}
+            <div class="row offer">
+                <div class="col-md-8">
+                    <h5>Opis Pracy</h5>
+                    {{ form_row(form.type) }}
+                    {{ form_row(form.position) }}
+                    {{ form_row(form.location) }}
+                    {{ form_row(form.description) }}
+                    {{ form_row(form.howToApply) }}
+                    {{ form_row(form.category) }}
+                    <br>
+                    <button type="submit" class="btn btn-primary pull-right">Edytuj ogłoszenie</button>
+                </div>
+                <div class="col-md-4">
+                    <h5>Dane Firmy</h5>
+                    {{ form_row(form.companyName) }}
+                    {{ form_row(form.logo) }}
+                    {{ form_row(form.url) }}
+                </div>
+            </div>
+            {{ form_end(form) }}
+
+            {{ form_rest(form) }}
+        </div>
+
+    </form>
+
 {% endblock %}
